[package]
name = "ros2kit"
version = "0.1.1"
edition = "2024"
authors = ["Alvaro Gaona <alvgaona@gmail.com>"]
description = "Rust utility library for ROS 2 workspace management and ament environment discovery"
license = "LGPL-3.0"
repository = "https://github.com/alvgaona/ros2kit"
homepage = "https://github.com/alvgaona/ros2kit"
keywords = ["ros2", "robotics", "ament", "colcon"]
categories = ["development-tools", "science::robotics"]

[features]
colcon = []

[dependencies]
anyhow = "1"
dirs = "5"
ignore = "0.4"
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "sync", "io-util", "time", "fs", "rt", "macros"] }
